--- a/examples/angular-cli/src/stories/others/ngx-translate/README.stories.mdx
+++ b/examples/angular-cli/src/stories/others/ngx-translate/README.stories.mdx
@@ -4,7 +4,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 # [ngx-translate](https://github.com/ngx-translate/core)
 
-> No real example here to avoid adding more dependency to sotrybook mono repository
+> No real example here to avoid adding more dependency to storybook mono repository
 
 There are several ways to configure ngx-translate in storybook which will depend on your context.
 
